--- a/web-dev/index.html
+++ b/web-dev/index.html
@@ -1,13 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>My Blog</title>
-        <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
-    </body>
-    <script src="index.js"></script>
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>My Blog</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+    <h1>I am Nakib,</h1>
+    <h2>and this is my webpage</h2>
+    <h3>I'm not a big fan of writing in HTML but this is an h3 tag</h3>
+    <h4>For context, these are the languages I do like to write in</h4>
+    <ul>
+        <li>C/C++</li>
+        <li>Python</li>
+        <li>Java</li>
+        <li><b>OCaml</b></li>
+    </ul>
+
+    <h4>This is me ranking my proficiency with them: </h4>
+    <ol>
+        <li>Python</li>
+        <li>C/C++</li>
+        <li>Java</li>
+        <li>OCaml</li>
+    </ol>
+
+    <h4>This is my first time creating a table</h4>
+    <table>
+        <tr>
+            <th>Breakfast</th>
+            <th>Lunch</th>
+            <th>Dinner</th>
+        </tr>
+        <tr>
+            <td>Scrambled Eggs</td>
+            <td>Salmon</td>
+            <td>Pasta</td>
+        </tr>
+        <tr>
+            <td>Scrambled Eggs</td>
+            <td>TBD</td>
+            <td>Pasta</td>
+        </tr>
+    </table>
+
+    <h4>Below is an image tag I got from W3 Schools</h4>
+    <img src="https://www.w3schools.com/images/lamp.jpg">
+
+    <a href="test.html">My other Page</a>
+
+
+</body>
+<script src="index.js"></script>
+
 </html>
